fixed the spacing issues in checkout payment

--- a/Grainjar-Website/css/grid.css
+++ b/Grainjar-Website/css/grid.css
@@ -243,6 +243,20 @@
 	display: flex;
 	flex-direction: column;
 }
+
+.payment-item img{
+	margin-left:0.5em;
+	margin-bottom:-1em;
+}
+
+.payment-item{
+	margin-right:2em;
+}
+
+.paymentt {
+	margin-top:2em;
+}
+
 /*Checkout-Shipping*/
 
 /*
@@ -286,6 +300,25 @@
 }
 
 /*Checkout-Post-Order*/
+
+.finished-order-grid {
+	display:grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.finished-order-item ul{
+	list-style-type:none;
+	margin-left:-2.4em;
+}
+
+.coco-hazelnut-box {
+	display:flex;
+}
+
+.details-purchase {
+	margin-left:2em;
+	margin-top:-2em;
+}
 
 /*Footer*/
 #footer{
@@ -442,6 +475,13 @@
 	#checkout-breadcrumb{
 		font-size:0.7em;
 	}
+
+	/*order summary*/
+
+	.finished-order-grid {
+		display:grid;
+		grid-template-columns: 1fr 1fr;
+}
 }
 
 
